src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
