src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: combined
---
• Viewed Image
  └ example.png
