src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__mcp_startup_header_booting.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: terminal.backend()
---
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask LHA to do anything                                                        "
"                                                                                "
"  gpt-5.3-codex · 100% left · ~/Workspace/lha/src/tui/app                       "
