src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: popup
---
  Select Reasoning Level for gpt-5.6-sol

  1. Low (default)   Fast responses with lighter reasoning
  2. Medium          Balances speed and reasoning depth for everyday tasks
› 3. High (current)  Greater reasoning depth for complex problems
  4. Extra high      Extra high reasoning depth for complex problems
  5. Max             Maximum reasoning depth for the hardest problems
  6. Ultra           Maximum reasoning depth; delegated jobs continue to
                     follow LHA's existing agent-job behavior

  Press enter to confirm or esc to go back
